--- a/.github/workflows/test_simple_android_id.yaml
+++ b/.github/workflows/test_simple_android_id.yaml
@@ -1,4 +1,4 @@
-name: tEST Latest Android NDK and SDK ID
+name: TEST Latest Android NDK and SDK ID
 
 on:
   workflow_dispatch:
@@ -21,24 +21,32 @@ jobs:
 
       - name: Install Android SDK Command-line Tools
         run: |
-          sudo mkdir -p /opt/android-sdk/cmdline-tools/latest
-          cd /opt/android-sdk/cmdline-tools/latest
-          curl -o sdk-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-          unzip sdk-tools.zip
-          rm sdk-tools.zip
-          echo "export ANDROID_HOME=/opt/android-sdk" >> $GITHUB_ENV
-          echo "export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
-          echo "export PATH=$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
+          export ANDROID_HOME=$HOME/android-sdk
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+          export PATH=$ANDROID_HOME/platform-tools:$PATH
+          mkdir -p $ANDROID_HOME/cmdline-tools
+          cd $ANDROID_HOME/cmdline-tools
+          curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
+          unzip commandlinetools.zip
+          rm commandlinetools.zip
+          mv cmdline-tools latest
+          echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+          echo "PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
+          echo "PATH=$ANDROID_HOME/platform-tools:$PATH" >> $GITHUB_ENV
 
       - name: Accept Licenses
-        run: yes | sdkmanager --licenses
+        run: |
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+          yes | sdkmanager --licenses || true
 
       - name: Get Latest Android SDK ID
         run: |
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
           sdkmanager --list | grep "platforms;android-" | awk '{print $1}' | sort -V | tail -n 1 | tee latest_sdk_id.txt
 
       - name: Get Latest Android NDK ID
         run: |
+          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
           sdkmanager --list | grep "ndk;" | awk '{print $1}' | sort -V | tail -n 1 | tee latest_ndk_id.txt
 
       - name: Upload SDK and NDK IDs as Artifacts
