--- a/.github/workflows/test_simple_android_id.yaml
+++ b/.github/workflows/test_simple_android_id.yaml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Android SDK tools
+      - name: Set up Android SDK tools  
         uses: android-actions/setup-android@v3
         with:
           command-line-tools: "latest"
       - name: Scrape SDK ID  # Step with the correct ID
         id: scrape_sdk
         run: |
-          sdk_id=$( $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list | grep "platforms;android-" | awk -F '-' '{print $2}' | cut -c 1-2 )
+          sdk_id=$( $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list | grep "sources;android-" | awk -F '-' '{print $2}' | cut -c 1-2 )
           echo "sdk_id=$sdk_id" >> $GITHUB_OUTPUT  # Setting the output correctly
       - name: Display latest API level
         id: asd_asd_asd
