--- a/.github/workflows/test_simple_android_id.yaml
+++ b/.github/workflows/test_simple_android_id.yaml
@@ -20,11 +20,14 @@ jobs:
         id: scrape_sdk
         run: |
           sdk_id=$( $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list | grep "sources;android-" | awk -F '-' '{print $2}' | cut -c 1-2 )
+          echo "sdk_id=$sdk_id" >> $GITHUB_OUTPUT  # Setting the output correctly
+      - name: Substring Last Two Characters
+        run: |
           ORIGINAL_STRING=$sdk_id
-          SUBSTRING="${ORIGINAL_STRING:0:2}"
+          LENGTH="${#ORIGINAL_STRING}"
+          SUBSTRING="${ORIGINAL_STRING:$((LENGTH-2))}"
           echo "Original string: $ORIGINAL_STRING"
           echo "Substring: $SUBSTRING"
-          echo "sdk_id=$sdk_id" >> $GITHUB_OUTPUT  # Setting the output correctly
       - name: Display latest API level
         id: asd_asd_asd
         run: |
