--- a/.github/workflows/update-android-sdk.yml
+++ b/.github/workflows/update-android-sdk.yml
@@ -34,6 +34,35 @@ jobs:
           mv  -v ./adb-fastboot-installer/platform-tools/* ./adb-fastboot-installer/adb
           rm sdk.zip
 
+      - name: Get all branch names
+        id: get_branches
+        run: |
+          branch_names=$(git branch --remote | grep origin/ | grep -v HEAD | sed 's/origin\///')
+          echo "BRANCH_NAMES=$branch_names" >> "$GITHUB_OUTPUT"
+
+      - name: Parse branch names and find highest number
+        id: parse_branches
+        run: |
+          branch_names="${{ steps.get_branches.outputs.BRANCH_NAMES }}"
+          highest_number=0
+
+          if [[ -n "$branch_names" ]]; then
+            for branch in $branch_names; do
+              number=$(echo "$branch" | grep -o '[0-9]\+$') #Extracts the number at end of branch name.
+              if [[ -n "$number" ]]; then
+                if [[ "$number" -gt "$highest_number" ]]; then
+                  highest_number="$number"
+                fi
+              fi
+            done
+          fi
+
+          echo "HIGHEST_NUMBER=$highest_number" >> "$GITHUB_OUTPUT"
+
+      - name: Echo highest number
+        run: |
+          echo "Highest branch number: ${{ steps.parse_branches.outputs.HIGHEST_NUMBER }}"
+
       - name: Check Secrets
         run: 'echo "$SSH_KEY" > key'
         shell: bash
