--- a/.github/workflows/update-android-sdk.yml
+++ b/.github/workflows/update-android-sdk.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - with:
+          fetch-depth: 0 
 
       - name: Checkout Base Repository
         id: initialize_repository
@@ -37,9 +39,8 @@ jobs:
       - name: Get all branch names
         id: get_branches
         run: |
-          branch_names=$(git branch --remote | grep origin/ | grep -v HEAD | sed 's/origin\///')
+          branch_names=$(git branch | grep -v HEAD | sed 's/\* //') # Get local branches
           echo "BRANCH_NAMES=$branch_names" >> "$GITHUB_OUTPUT"
-          echo $branch_names
 
       - name: Parse branch names and find highest number
         id: parse_branches
