--- a/.github/workflows/find_highest_branch.yml
+++ b/.github/workflows/find_highest_branch.yml
@@ -1,4 +1,4 @@
-name: Find Highest Branch Number
+name: Debug Branch Fetch
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  find_highest_branch_number:
+  debug_branches:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,47 +20,5 @@ jobs:
       - name: Fetch all remote branches
         run: git fetch --all
 
-      - name: Debug List remote branches
-        run: git remote show origin
-
-      - name: Debug Raw branch list before local creation
-        run: git branch
-
-      - name: Create local tracking branches
-        run: |
-          for remote in $(git branch -r); do
-            branch=$(echo "$remote" | sed 's/origin\///');
-            git branch --track "$branch" "$remote";
-          done
-
-      - name: Debug Raw branch list after local creation
-        run: git branch
-
-      - name: Get all branch names
-        id: get_branches
-        run: |
-          branch_names=$(git branch | grep -v HEAD | sed 's/\* //')
-          echo "BRANCH_NAMES=$branch_names" >> "$GITHUB_OUTPUT"
-
-      - name: Parse branch names and find highest number
-        id: parse_branches
-        run: |
-          branch_names="${{ steps.get_branches.outputs.BRANCH_NAMES }}"
-          highest_number=0
-
-          if [[ -n "$branch_names" ]]; then
-            for branch in $branch_names; do
-              number=$(echo "$branch" | grep -o '[0-9]\+$')
-              if [[ -n "$number" ]]; then
-                if [[ "$number" -gt "$highest_number" ]]; then
-                  highest_number="$number"
-                fi
-              fi
-            done
-          fi
-
-          echo "HIGHEST_NUMBER=$highest_number" >> "$GITHUB_OUTPUT"
-
-      - name: Echo highest number
-        run: |
-          echo "Highest branch number: ${{ steps.parse_branches.outputs.HIGHEST_NUMBER }}"
+      - name: Debug List all branches
+        run: git branch -a
