--- a/.github/workflows/find_highest_branch.yml
+++ b/.github/workflows/find_highest_branch.yml
@@ -1,4 +1,4 @@
-name: Find Highest Branch Number
+name: Find Highest Branch
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  find_highest_branch_number:
+  debug_branches:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,10 +20,13 @@ jobs:
       - name: Fetch all remote branches
         run: git fetch --all
 
+      - name: List all branches
+        run: git branch -a
+
       - name: Get all branch names (local)
         id: get_branches
         run: |
-          branch_names=$(git branch | grep -v HEAD | sed 's/\* //')
+          branch_names=$(git branch -a | grep -v HEAD | sed 's/\* //')
           echo "BRANCH_NAMES=$branch_names" >> "$GITHUB_OUTPUT"
 
       - name: Parse branch names and find highest number
